[tool.poetry]
name = "cs9-final-project-miriamengber"
version = "0.1.0"
description = ""
authors = ["MiriamEngber <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
random2 = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
